--- a/Assignments/lesson-01/Assignment-01.ipynb
+++ b/Assignments/lesson-01/Assignment-01.ipynb
@@ -34,7 +34,9 @@
    "source": [
     "#### 1. 复现课堂代码\n",
     "\n",
-    "在本部分，你需要参照我们给大家的GitHub地址里边的课堂代码，结合课堂内容，复现内容。"
+    "在本部分，你需要参照我们给大家的GitHub地址里边的课堂代码，结合课堂内容，复现内容。\n",
+    "\n",
+    "课堂代码复现内容，查看名为Exersice-01.ipynb的文件。"
    ]
   },
   {
@@ -96,7 +98,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ans: {Put your answer here}"
+    "Ans: 无人驾驶，文本翻译，语音识别，街景识别等等。"
    ]
   },
   {
@@ -110,7 +112,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ans: {Put your answer here}"
+    "Ans: \n",
+    "\n",
+    "        1、Github为管理多人开发项目提供了便利。通过在Github创建项目、将Github上的项目代码Pull到本地、将本地项目Push更新到Github，以方便多人合作完成项目代码。Github为开源网站，也方便大家分享交流项目代码。通过安装GIT工具以及Github Desktop工具，我们能够随时同步本地项目和Github的进度。\n",
+    "        \n",
+    "        2、Jupyter notebook 能够及时地返回编程结果，同时方便书写笔记，所以在分享、可视化编程过程方面比较有优势。Pycharm提供了更为专业、集中的开发环境。这两个工具结合，能方便我们面对不同的任务进行编程训练。"
    ]
   },
   {
@@ -124,7 +130,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ans:"
+    "Ans:\n",
+    "\n",
+    "概率模型是使用条件概率、贝叶斯概率公式等统计知识来计算某些随机变量之间的条件概率或者联合概率。"
    ]
   },
   {
@@ -138,7 +146,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ans:"
+    "Ans:\n",
+    "\n",
+    "在自然语言识别中，语音识别任务、文本翻译等都会使用到概率模型，去计算一句话出现的概率。\n",
+    "在很多计算机视觉任务中，也会使用到概率模型。比如我们在使用GAN等模型去完成一些图像生成任务时，往往是使用的概率模型。"
    ]
   },
   {
@@ -152,7 +163,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ans:"
+    "Ans:\n",
+    "\n",
+    "1、在模式匹配之后，可能会产生多种匹配结果，我们可以使用概率去计算每种匹配结果的合理性，从而选出最佳匹配。\n",
+    "\n",
+    "2、但是基于模式匹配的算法，加入了更多的人工经验知识，需要预先定义完善的模式匹配规则，工程量巨大。\n",
+    "\n"
    ]
   },
   {
@@ -166,7 +182,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ans:"
+    "Ans:语言模型就是基于一系列统计假设以及条件概率、贝叶斯公式来计算一句字符串的概率，使用概率来衡量语句的合理性。"
    ]
   },
   {
@@ -180,7 +196,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ans:"
+    "Ans:\n",
+    "\n",
+    "  语音识别时，当将语音转化文字之后，可能有多个词序列，这是可以使用语言模型，来判断哪个词序列更为合理；\n",
+    "  \n",
+    "  机器翻译时，可以使用语言模型来判断转化过来的翻译文本，哪一句更为合理；\n",
+    "  \n",
+    "  在文本内容修复、文本预测的时候，由已知的文本内容，我们可以使用语言模型来预测缺失的文本为哪个词。"
    ]
   },
   {
@@ -194,7 +216,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ans:"
+    "Ans:\n",
+    "\n",
+    "1-gram 语言模型在计算词序列的概率的时候，假设词与词之间是相互独立的。因此一个语句的出现概率可以写成：\n",
+    "\n",
+    "$P(w_1w_2w_3...w_n)=P(w_1)P(w_2)....P(w_n)$"
    ]
   },
   {
@@ -208,7 +234,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ans:"
+    "Ans:\n",
+    "\n",
+    "优点：模型简单，计算一句话的概率比较简单，直接为每个词的概率的乘积\n",
+    "\n",
+    "缺点：模型假设苛刻，要求词与词之间相互独立，但是现实条件下，语句序列词与词之间是存在一定关系的，并非独立。"
    ]
   },
   {
@@ -222,7 +252,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ans:"
+    "Ans:\n",
+    "\n",
+    "1=2-gram 语言模型在计算词序列的概率的时候，假设词的出现与否只依赖于前一个词。因此一个语句的出现概率可以写成：\n",
+    "\n",
+    "$P(w_1w_2w_3...w_n)=P(w_1)P(w_2|w_1)P(w_3|w_1w_2)....P(w_n|w_1w_2...w_{n-1})~P(w_1)P(w_2|w_1)...P(w_n|w_{n-1})$"
    ]
   },
   {
@@ -317,13 +351,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
-    "you_need_replace_this_with_name_you_given = '''\n",
-    "# you code here\n",
-    "'''"
+    "# 自动生成SQL语句，select语句\n",
+    "SQL = \"\"\"\n",
+    "SQL = SELECT  COLUMNS FROM TABLE WHERE CONDITIONS\n",
+    "COLUMNS = * | COLS \n",
+    "COLS = COL |COLS COL\n",
+    "COL = Date, | Catograry, | Sales,\n",
+    "TABLE = ORDRES_GZ | ORDERS_SH | ORDERS_BJ\n",
+    "CONDITIONS = Date BETWEEN TO_DATE( start ,'YYYYMMDD') AND TO_DATE( end ,'YYYYMMDD')\n",
+    "start = '20190101'| '20190201'| '20190301'\n",
+    "end = '20190430' | '20190531' | '20190630'\n",
+    "\"\"\"\n"
    ]
   },
   {
@@ -335,13 +377,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
-    "you_need_replace_this_with_name_you_given = '''\n",
-    "# you code here\n",
-    "'''"
+    "#点外卖的语法\n",
+    "order = \"\"\"\n",
+    "order = 打招呼 报明意图 报菜名 地址 ， 道谢 ！\n",
+    "打招呼 = 你好, | 您好, | 打扰一下, \n",
+    "报明意图 = 主语 行为\n",
+    "主语 = 我要|我们要|我想|我需要|我可不可以\n",
+    "行为 = 点单。|点菜。\n",
+    "报菜名 = 我想要 菜名 。\n",
+    "菜名 = 单个菜名 |单个菜名 、 菜名\n",
+    "单个菜名 = 小龙虾| 红烧肉| 红烧排骨| 可乐鸡翅| 水煮鱼| 烤羊排 |水煮肉片| 口水鸡 | 酱板鸭 | 白灼虾 | 白切鸡\n",
+    "地址 = 我家在 区名 小区名 楼号 房间号\n",
+    "区名 = 天河区 | 白云区 | 海珠区 | 番禺区 | 越秀区 | 黄埔区\n",
+    "小区名 = 保利云景 | 金燕花苑 | 白云家园 | 云山熹景\n",
+    "楼号 = A栋 | B栋 |156栋 |257栋 |101栋\n",
+    "房间号 = 502 | 201 | 101 | 804 | 603\n",
+    "道谢 = 谢谢您 |谢谢 |多谢\n",
+    "\"\"\"\n"
    ]
   },
   {
@@ -360,20 +416,102 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"SELECT * FROM ORDERS_BJ WHERE Date BETWEEN TO_DATE( '20190201' ,'YYYYMMDD') AND TO_DATE( '20190630' ,'YYYYMMDD')\""
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "def generate_n():\n",
-    "    # you code here \n",
-    "    pass"
+    "import random\n",
+    "import re\n",
+    "def defined_grammar(gram_sent,split='='):\n",
+    "    grammar_sentence = {}\n",
+    "    for line in gram_sent.split('\\n'):\n",
+    "        if not line.strip(): continue\n",
+    "        exp, stmt = line.split(split)\n",
+    "        grammar_sentence[exp.strip()]=[s.split() for s in stmt.split('|')]\n",
+    "    return grammar_sentence\n",
+    "    \n",
+    "\n",
+    "def generate(gram,target):\n",
+    "    if target not in gram: return target\n",
+    "    expand = [generate(gram,t) for t in random.choice(gram[target])]#target可以扩展\n",
+    "    return ' '.join([e if e!='/n' else '\\n'  for e in expand if e !='null'])\n",
+    "\n",
+    "grammar_sentence = defined_grammar(SQL,'=')\n",
+    "generate(gram=grammar_sentence,target='SQL') \n"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 30,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SELECT * FROM ORDRES_GZ WHERE Date BETWEEN TO_DATE( '20190201' ,'YYYYMMDD') AND TO_DATE( '20190430' ,'YYYYMMDD')\n",
+      "SELECT * FROM ORDERS_BJ WHERE Date BETWEEN TO_DATE( '20190101' ,'YYYYMMDD') AND TO_DATE( '20190430' ,'YYYYMMDD')\n",
+      "SELECT * FROM ORDERS_BJ WHERE Date BETWEEN TO_DATE( '20190301' ,'YYYYMMDD') AND TO_DATE( '20190531' ,'YYYYMMDD')\n",
+      "SELECT Date, Date, FROM ORDERS_SH WHERE Date BETWEEN TO_DATE( '20190101' ,'YYYYMMDD') AND TO_DATE( '20190630' ,'YYYYMMDD')\n",
+      "SELECT Catograry, FROM ORDERS_BJ WHERE Date BETWEEN TO_DATE( '20190201' ,'YYYYMMDD') AND TO_DATE( '20190430' ,'YYYYMMDD')\n",
+      "SELECT Date, FROM ORDERS_BJ WHERE Date BETWEEN TO_DATE( '20190201' ,'YYYYMMDD') AND TO_DATE( '20190531' ,'YYYYMMDD')\n",
+      "SELECT * FROM ORDRES_GZ WHERE Date BETWEEN TO_DATE( '20190301' ,'YYYYMMDD') AND TO_DATE( '20190430' ,'YYYYMMDD')\n",
+      "SELECT * FROM ORDERS_SH WHERE Date BETWEEN TO_DATE( '20190201' ,'YYYYMMDD') AND TO_DATE( '20190630' ,'YYYYMMDD')\n",
+      "SELECT Catograry, Catograry, Date, FROM ORDRES_GZ WHERE Date BETWEEN TO_DATE( '20190201' ,'YYYYMMDD') AND TO_DATE( '20190531' ,'YYYYMMDD')\n",
+      "SELECT Sales, FROM ORDRES_GZ WHERE Date BETWEEN TO_DATE( '20190101' ,'YYYYMMDD') AND TO_DATE( '20190430' ,'YYYYMMDD')\n"
+     ]
+    }
+   ],
    "source": [
-    ">"
+    "def generate_n(n,sentence,split,target):\n",
+    "    for i in range(n):\n",
+    "        grammar_sentence = defined_grammar(sentence,split)\n",
+    "        print(generate(gram=grammar_sentence,target=target))\n",
+    "    pass\n",
+    "\n",
+    "generate_n(10,SQL,'=','SQL')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "打扰一下,我需要点菜。我想要水煮肉片、水煮鱼。我家在越秀区金燕花苑257栋201，多谢！\n",
+      "您好,我要点菜。我想要水煮鱼。我家在黄埔区保利云景156栋603，谢谢您！\n",
+      "打扰一下,我想点菜。我想要红烧肉、水煮鱼、可乐鸡翅、红烧排骨、红烧肉。我家在天河区云山熹景156栋101，多谢！\n",
+      "您好,我想点单。我想要可乐鸡翅。我家在越秀区白云家园101栋804，谢谢您！\n",
+      "打扰一下,我想点菜。我想要小龙虾、小龙虾、红烧肉。我家在天河区保利云景101栋201，谢谢！\n",
+      "您好,我需要点菜。我想要红烧排骨、水煮鱼。我家在黄埔区保利云景257栋804，谢谢！\n",
+      "打扰一下,我要点单。我想要红烧肉、酱板鸭。我家在白云区金燕花苑101栋201，谢谢您！\n",
+      "你好,我们要点单。我想要红烧肉。我家在黄埔区金燕花苑B栋502，谢谢您！\n",
+      "打扰一下,我要点单。我想要小龙虾、可乐鸡翅。我家在海珠区金燕花苑A栋603，多谢！\n",
+      "打扰一下,我可不可以点菜。我想要水煮鱼。我家在越秀区白云家园156栋804，谢谢您！\n"
+     ]
+    }
+   ],
+   "source": [
+    "def generate(gram,target):\n",
+    "    if target not in gram: return target\n",
+    "    expand = [generate(gram,t) for t in random.choice(gram[target])]#target可以扩展\n",
+    "    return ''.join([e if e!='/n' else '\\n'  for e in expand if e !='null'])\n",
+    "\n",
+    "generate_n(10,order,'=','order')"
    ]
   },
   {
@@ -399,10 +537,134 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 25,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "> "
+    "import pandas as pd\n",
+    "import re\n",
+    "sentences = []\n",
+    "with open('../../Data/train.txt/train.txt','r',encoding='UTF-8') as f:\n",
+    "    for line in f.readlines():\n",
+    "        sentence =''.join(re.findall('[\\u4e00-\\u9fa5 0-9]+',line))#只提取汉字和数字\n",
+    "        sentences.append(re.sub('^\\d+','',sentence).strip())#去掉每句话之前的数字编号，和首尾的空格"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['法律要求残疾保险吗',\n",
+       " '债权人可以在死后人寿保险吗',\n",
+       " '旅行者保险有租赁保险吗',\n",
+       " '我可以开一辆没有保险的新车吗',\n",
+       " '人寿保险的现金转出价值是否应纳税',\n",
+       " '如何报告年金收入',\n",
+       " '家庭保险涵盖什么',\n",
+       " '什么是简单的退休计划',\n",
+       " '社会保险残疾保险是什么',\n",
+       " '汽车保险是否预付',\n",
+       " '医疗保险部分盖什么',\n",
+       " '退伍军人能否获得人寿保险',\n",
+       " '我的房主保险是否包括失去的结婚戒指',\n",
+       " '分配风险汽车保险如何工作',\n",
+       " '我的男朋友可以加我的汽车保险吗',\n",
+       " '我是否需要提交私人财产车祸索赔的警察报告',\n",
+       " '全覆盖汽车保险盖修理',\n",
+       " '人生在伊斯兰教中是否可以接受',\n",
+       " '健康保险是否覆盖管道逆转',\n",
+       " '如果您已经诊断为乳腺癌您可以获得多大的人寿保险']"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sentences[:20]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "80724\n"
+     ]
+    }
+   ],
+   "source": [
+    "import jieba\n",
+    "from collections import Counter\n",
+    "TOKEN = []\n",
+    "for s in sentences:\n",
+    "    TOKEN += jieba.cut(s)\n",
+    "print(len(TOKEN))\n",
+    "words_count = Counter(TOKEN)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['法律要求', '要求残疾', '残疾保险', '债权人可以', '可以在', '在死', '死后', '后人寿保险', '旅行者保险', '保险有']\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "6.011604060677968e-12"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "##########################计算一个语句的概率\n",
+    "def Prob_1(word):\n",
+    "    return words_count[word]/len(TOKEN)\n",
+    "\n",
+    "TOKEN_2_gram = []\n",
+    "for s in sentences:\n",
+    "    token = list(jieba.cut(s))\n",
+    "    TOKEN_2_gram += [''.join(token[i:i+2]) for i in range(len(token)-2)]\n",
+    "\n",
+    "####【课程代码是不是有问题 ，定义的Prob_2函数计算的是P(w1w2)的概率，而我们计算一句话的概率，需要的是P(w2|w1)的概率】\n",
+    "words_count_2_gram = Counter(TOKEN_2_gram)\n",
+    "def Prob_2(word1,word2):\n",
+    "    if word1 + word2 in TOKEN_2_gram:\n",
+    "        return words_count_2_gram[word1+word2]/len(TOKEN_2_gram)\n",
+    "    else:\n",
+    "        return 1/len(TOKEN_2_gram)\n",
+    "print(TOKEN_2_gram[0:10])\n",
+    "\n",
+    "##计算一句话的概率\n",
+    "def Sentence_Prob(sentence):\n",
+    "    words = list(jieba.cut(sentence))\n",
+    "    sent_prob = 1\n",
+    "    for i,w in enumerate(words[:-1]):\n",
+    "        sent_prob *= Prob_2(w,words[i+1])\n",
+    "    return sent_prob\n",
+    "Sentence_Prob('健康保险是不是包含')  \n"
    ]
   },
   {
@@ -510,16 +772,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[(2, 5), (1, 4), (4, 4), (5, 0)]"
+       "5"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -544,12 +806,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 63,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "你好, 我需要 点菜。 我想要 白切鸡 、 水煮鱼 、 可乐鸡翅 、 水煮肉片 、 白切鸡 、 水煮肉片 、 水煮鱼 、 可乐鸡翅 。 我家在 海珠区 白云家园 A栋 101 ， 谢谢 ！\n"
+     ]
+    }
+   ],
    "source": [
-    "def generate_best(): # you code here\n",
-    "    pass"
+    "def generate_best(grammar,split,target,prob_model): # you code here\n",
+    "    prob = [] #记录每个句子的概率\n",
+    "    for i in range(100):\n",
+    "        grammar_sentence = defined_grammar(grammar,split)\n",
+    "        generate_sentence = generate(gram=grammar_sentence,target=target)\n",
+    "        generate_sentence_clean = ''.join(re.findall('\\w+',generate_sentence))\n",
+    "        prob.append((generate_sentence,Sentence_Prob(generate_sentence_clean)))\n",
+    "    sentence_best = sorted(prob,key=lambda x:x[1])[0]\n",
+    "    print(sentence_best[0])\n",
+    "    \n",
+    "    pass\n",
+    "\n",
+    "generate_best(grammar=order,split='=',target='order',prob_model=Sentence_Prob)"
    ]
   },
   {
@@ -577,7 +858,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ans:"
+    "Ans:我定义的语法是随机点外卖的语句，其中涉及到随机生成的地址，但是区+小区+门牌号的随机组合，在现实中可能并没有这样的地址。如果需要利用语言模型判断概率合理的话，应该使用更有针对性的数据据进行语言模型的训练，这就需要数据集中涉及到大量的地址库。"
    ]
   },
   {
